fix: flickering problem seems a little bit less flickering

--- a/src/styles/sidebar_style.scss
+++ b/src/styles/sidebar_style.scss
@@ -26,7 +26,7 @@ body {
 
   .sidebar.collapsed .header .toggle {
     position: absolute;
-    left: 135px;
+    left: 50%;
     top: 39px;
     width: 28px;
     height: 28px;
@@ -37,7 +37,8 @@ body {
     background: #0C1A46;
     cursor: pointer;
     z-index: 1000;
-    transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateX(-50%);
+    transition: transform 0.3s ease-in-out;
   }
   .sidebar.collapsed .header .toggle img {
     width: 28px;
@@ -52,9 +53,8 @@ body {
   .logo-container,
   .menu-item,
   .search-container {
-    transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-    transform: translateZ(0);
-    will-change: transform, opacity, width;
+    opacity: 1;
+    transform: translateX(0);
   }
   
 
@@ -212,8 +212,7 @@ align-items: center;
     .menu-text,
     .app-name,
     .cmd-icons {
-      transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-      opacity: 0;
+      transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
     }
   }
 
